--- a/todo-list/main.html
+++ b/todo-list/main.html
@@ -3,12 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
         <title>Document</title>
+        <link rel="stylesheet" href="./main.css">
     </head>
     <body>
-        <h1>투두리스트</h1>
-        <h2>투두리스트</h2>
-        <h3>투두리스트</h3>
-        <div>영역</div>
+        <div class="container" id="container">
+            <h3 id="title">정말 간단 TODO 리스트</h3>
+            <div id= "sub-container">
+                <ul class="list-group" id="list-group">
+                    <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
+                      오늘의 할 일 목록 하나!
+                      <span class="badge text-bg-primary rounded-pill">삭제</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
+                        오늘의 할 일 목록 하나!
+                    <span class="badge text-bg-primary rounded-pill">삭제</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center" id="list-group-item">
+                    오늘의 할 일 목록 하나!
+                    <span class="badge text-bg-primary rounded-pill">삭제</span>
+                    </li>
+                  </ul>
+            </div>
+            <div class="input-group mb-3" id="input-group">
+                <input type="text" class="form-control" id="input-area">
+                <button class="btn btn-outline-secondary" type="button" id="button-area">Button</button>
+            </div>
+        </div>
     </body>
 </html>
